syntax = "proto3";

option csharp_namespace = "FitZone.StatisticsService.Protos";

service TrainingsGrpc {
    rpc GetTrainingsNumber (TrainingsRequest) returns (TrainingsResponse);
}


message TrainingsRequest {
    string gymId = 1;
    string startDate = 2;
    string endDate = 3;
}

message TrainingsResponse {
    string numOfFitnessClasses = 1;
    string numOfPTTrainings = 2;
}